eberry/kubernetes/eberryApache-deplo.yml
apiVersion: v1
kind: Service
metadata:
  name: eberryapache-service
  labels:
    app: eberryapache
spec:
  selector:
    app: eberryapache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eberryapache-deployment
  labels:
    app: eberryapache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eberryapache
  template:
    metadata:
      labels:
        app: eberryapache
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: eberryapache-deployment
        image: registry.gitlab.com/skymedia-dev/eberry/eberry-apache:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: sessions
          mountPath: /var/www/html/skycms/sessions
      volumes:
        - name: sessions
          hostPath:
            path: /sessions
            type: DirectoryOrCreate
