eberry/kubernetes/mariadb-delpo.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb-deployment  
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: eberrydata-pv
          mountPath: "/eberrydata/docker-eberry.sql"
          subPath: docker-eberry.sql
      volumes:
        - name: eberrydata-pv
          persistentVolumeClaim:
            claimName: eberrydata-pvc
