eberry/kubernetes/gatewayapi.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eberry-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - port: 80
    name: http
    protocol: HTTP

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: eberry-httproute
  labels:
    app: gateway-api
spec:
  parentRefs:
  - name: eberry-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /eberry
    backendRefs:
    - name: eberryapache-service
      port: 80
